--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro": "^4.15.0",
     "astro-compress": "^2.3.1",
     "astro-icon": "^1.1.1",
+    "astro-remote": "^0.3.3",
     "colorjs.io": "^0.5.2",
     "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
