--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
   # 允许你在 GitHub 上的 Actions 标签中手动触发此“工作流程”
   workflow_dispatch:
 
+  # GMT+8 0:00自动更新
+  schedule:
+    - cron: '0 16 * * *'
+
 # 允许 job 克隆 repo 并创建一个 page deployment
 permissions:
   contents: read
